# reverie-studio

./: .env.example  .gitignore  DISTRIBUTION_EXCLUDE.txt  EXTERNAL_ASSETS.md  INSTALL_INFO.txt  LICENSE  PUBLIC_RELEASE_CHECKLIST.md  README.md  ROADMAP.md  SECURITY_PUBLIC_CHECK.md  check_tts.ps1  installer_setup.iss  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_vm.txt  run_license_manager.bat  run_reverie.bat  run_reverie_daily_check.bat  run_reverie_demo_dry_run.bat  run_reverie_doctor.bat  run_reverie_gui_check.bat  run_reverie_handoff.bat  run_reverie_setup_env.bat  run_reverie_silent.bat  run_reverie_solo_status.bat  run_reverie_videotoon_smoke.bat  setup.bat
config/: firestore_rules.txt
docker/: Dockerfile  Dockerfile.sdwebui  Dockerfile.sovits  README_DOCKER.md  docker-compose.yml
docs/: ACTOR_MODEL_TEMPLATE.md  ADMIN_MANUAL_FIREBASE.md  ARCHITECTURE_DIAGRAM.md  BACKEND_PROFILES.md  BACKGROUND_ASSET_TEMPLATE.md  BM_DESIGN.md  CHANGELOG_v58.md  CODEX_SETUP_PROMPT.md  DEVELOPMENT_RULES.md  GISHINI_STYLE_MOTIONTOON_DESIGN_v64.md  GISHINI_STYLE_MOTIONTOON_IMPLEMENTATION_PLAN_v64.md  NEXT_STEPS_ROADMAP.md  PACK_CREATION_GUIDE_v60.md  PACK_QUALITY_STRATEGY_v61.md  PACK_SCHEMA_v59.md  POST_LAUNCH_ROADMAP_6M.md  PUBLIC_DEMO.md  REFERENCE_SCRIPT_HORROR.md  REVERIE_PACK_SPEC.md  ROADMAP_v65.md  SCRIPT_RUBRIC.md  SOLO_USE_RUNBOOK.md  STORY_STABILITY_LLM_MIGRATION_DESIGN_v64.md  STORY_STABILITY_LLM_MIGRATION_PROCESS_v64.md  STORY_STABILITY_LLM_MIGRATION_SPEC_v64.md  SUPERTONIC_TTS.md  SYSTEM_HOOK.md  SYSTEM_RENDERING.md  SYSTEM_SFX.md  SYSTEM_TTS.md  TROUBLESHOOTING.md  V63_DOC_INDEX.md  V63_INTEGRATED_DESIGN.md  V63_INTEGRATED_PROCESS.md  V63_INTEGRATED_SPEC.md  VIDEO_TOON_ACTOR_POOL_CONTRACT.md  turnaround_character_design.md
examples/: public_demo_pack.json
functions/: index.js  package-lock.json  package.json
installer/: dev_environment_installer.py  setup.iss  setup_v32.iss
promo/: reverie_promo.html  reverie_promo_v2.html
remotion-poc/: package-lock.json  package.json  remotion_bridge.py  tsconfig.json
schemas/: video_toon_actor_model.schema.json  video_toon_actor_pool.schema.json  video_toon_episode_cast.schema.json
scripts/: create_test_license.py  debug_gemini.py  prepare_distribution.py  public_export.py  public_snapshot_check.py  public_verify.py  sanitize_code.py  security_audit.py
src/: main.py  main_gui.py  reverie_backends.py  reverie_demo.py  reverie_doctor.py  reverie_env_bootstrap.py  reverie_gui_check.py  reverie_public_verify.py  reverie_quality.py  reverie_solo_handoff.py  reverie_solo_preflight.py  reverie_solo_status.py
tests/: auto_validation.py  claude_gui_runner.py  conftest.py  gui_auto_tester.py  gui_test_config.json  test_actor_model_angles.py  test_actor_model_template.py  test_actor_model_validation.py  test_admin_dashboard.py  test_ai_content_enhancer.py  test_ai_gatekeeper_redaction.py  test_auto_optimizer_redaction.py  test_background_library.py  test_batch_queue.py  test_callback_signatures.py  test_channel_analyzer_redaction.py  test_character_sheet_audit.py  test_clone_pack_generator_redaction.py  test_cold_open_quality.py  test_commercial_readiness.py  test_config_check.py  test_config_facade.py  test_create_test_license.py  test_crypto_utils.py  test_debug_gemini.py  test_e2e_pipeline_mock.py  test_env_bootstrap.py  test_evaluators_redaction.py  test_expression_overlay.py  test_feedback_loop_redaction.py  test_firebase_license_redaction.py  test_full_flow.py  test_full_pipeline.py  test_gui_check.py  test_gui_checkpoint_resume.py  test_gui_runtime.py  test_gui_wiring_guards.py  test_horror_pipeline.py  test_image_pipeline_placeholder.py  test_image_pipeline_redaction.py  (+94 more)
(+382 files in other folders)
