[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reverie-studio"
version = "63.0"
description = "Local-first Windows AI video production studio for repeatable creator workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Reverie Studio" }]
dependencies = [
    "python-dotenv>=1.0.0,<2.0.0",
    "requests>=2.28.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "customtkinter>=5.2.0,<6.0.0",
    "google-generativeai>=0.3.0,<1.0.0",
    "pillow>=10.0.0,<12.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "google-auth-oauthlib>=1.0.0,<2.0.0",
    "google-api-python-client>=2.100.0,<3.0.0",
    "websocket-client>=1.6.0,<2.0.0",
    "cryptography>=41.0.0,<44.0.0",
    "torch>=2.0.0,<3.0.0",
    "moviepy>=1.0.3,<2.0.0",
]

[project.optional-dependencies]
supertonic = [
    "supertonic>=1.3.1",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
reverie-commercial-readiness = "utils.commercial_readiness:main"
reverie-demo = "reverie_demo:main"
reverie-doctor = "reverie_doctor:main"
reverie-actor-model-requests = "utils.actor_model:main"
reverie-background-library-requests = "modules_pro.background_library:main"
reverie-videotoon-preflight = "utils.videotoon_preflight:main"
reverie-videotoon-prepare = "utils.videotoon_episode_prepare:main"
reverie-videotoon-render-plan = "utils.videotoon_render_plan:main"
reverie-videotoon-smoke = "utils.videotoon_smoke:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["reverie_backends", "reverie_demo", "reverie_doctor", "reverie_quality"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
